# indicator-darkmode

./: CMakeLists.txt  README.md  clickable.yaml  indicator-darkmode.desktop  indicator-darkmode.desktop.in  manifest.json.in
indicator/: CMakeLists.txt  com.kugiigi.indicator.darkmode  install.sh  kugiigi-indicator-darkmode.conf  kugiigi-indicator-darkmode.py  kugiigi.indicatordarkmode.indicator  kugiigi.indicatordarkmode.service  uninstall.sh
plugins/Indicator/: CMakeLists.txt  indicator.cpp  plugin.cpp  plugin.h
po/: CMakeLists.txt  de.po  fr.po  indicator-darkmode.pot  nl.po
qml/: Main.qml
